--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "grunt-contrib-connect",
+  "name": "neo-grunt-contrib-connect",
   "description": "Start a connect web server",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "author": {
-    "name": "Grunt Team",
-    "url": "http://gruntjs.com/"
+    "name": "Adarsh Singh",
+    "url": "https://github.com/adarshsingh1407"
   },
-  "repository": "gruntjs/grunt-contrib-connect",
+  "repository": "https://github.com/adarshsingh1407/neo-grunt-contrib-connect",
   "license": "MIT",
   "engines": {
     "node": ">=0.10.0"
@@ -19,7 +19,6 @@
     "async": "^1.5.2",
     "connect": "^3.4.0",
     "connect-livereload": "^0.5.0",
-    "http2": "^3.3.4",
     "morgan": "^1.6.1",
     "opn": "^4.0.0",
     "portscanner": "^1.0.0",
@@ -33,7 +32,7 @@
     "grunt-contrib-nodeunit": "^1.0.0"
   },
   "peerDependencies": {
-    "grunt": ">=0.4.0"
+    "grunt": "^1.0.1"
   },
   "keywords": [
     "gruntplugin",
@@ -43,6 +42,5 @@
   ],
   "files": [
     "tasks"
-  ],
-  "appveyor_id": "3bp93hbs2rd5lwfd"
+  ]
 }
